 # cspell: words licence

[workspace]
resolver = "2"
members = ["bin", "crates/cardano-chain-follower", "crates/hermes-ipfs"]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Steven Johnson <steven.johnson@iohk.io>"]
homepage = "https://input-output-hk.github.io/hermes"
repository = "https://github.com/input-output-hk/hermes"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = {level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"

[workspace.dependencies]
# specific commit from the `catalyst` branch
pallas = "0.30.1"
# specific commit from the `catalyst` branch
pallas-hardano = "0.30.1"
pallas-crypto = "0.30.1"
cardano-chain-follower = { path = "crates/cardano-chain-follower", version = "0.2.0" }

hermes-ipfs = { path = "crates/hermes-ipfs", version = "0.0.1" }

wasmtime = "24.0.0"
rusty_ulid = "2.0.0"
anyhow = "1.0.86"
blake2b_simd = "1.0.2"
blake3 = { version = "1.5.4", features = ["rayon", "mmap"] }
hex-literal = "0.4.1"
thiserror = "1.0.63"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
criterion = "0.5.1"
libtest-mimic = "0.7.0"
bip39 = "2.0.0"
iana-time-zone = "0.1.60"
rand = "0.8.5"
bip32 = "0.5.2"
ed25519-bip32 = "0.4.1"
dashmap = "6.0.1"
once_cell = "1.19.0"
clap = "4.5.16"
build-info = "0.0.38"
build-info-build = "0.0.38"
derive_more = "1.0.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
saffron = "0.1.0"
tokio = { version = "1.39.3", features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
    "process",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"
libsqlite3-sys = "0.30.0"
stringzilla = "3.9.3"
serial_test = { version = "3.1.1", features = ["file_locks"] }
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", rev = "694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version = "0.8.1", features = [
    "static",
    "blosc",
] }
temp-dir = "0.1.13"
# needs to enable blosc compression functionality for hdf5 crate
blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
num_cpus = "1.16.0"
console = "0.15.8"
serde = "1.0.209"
serde_json = "1.0.127"
jsonschema = "0.18.1"
url = "2.5.0"
regex = "1.10.4"
humansize = { version = "^2.1.2", default-features = false, features = [
    "no_alloc",
] }
reqwest = { version = "0.12.7, >=0.0.0", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
    "blocking",
    "charset",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "hickory-dns",
    "macos-system-configuration",
] }
mithril-client = { git = "https://github.com/input-output-hk/catalyst-mithril.git", branch = "fix/lgpl-licence", default-features = false, features = [
    "full",
    "num-integer-backend"
] }
mimalloc = "0.1.43"
bytes = "1.7.1"
tar = "0.4.41"
zstd = "0.13.2"
async-trait = "0.1.81"
dirs = "5.0.1"
futures = "0.3.30"
bytesize = "1.3.0"
async-compression = { version = "0.4.11", features = ["tokio", "zstd"] }
tokio-tar = "0.3.1"
humantime = "2.1.0"
crossbeam-queue = "0.3.11"
crossbeam-skiplist = "0.1.3"
crossbeam-channel = "0.5.13"
crossbeam-epoch = "0.9.18"
strum = "0.26.3"
strum_macros = "0.26.4"
rayon = "1.10.0"
ignore = "0.4.22"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10"
ed25519-dalek = "2.1.1"
x509-cert = "0.2.5"
coset = "0.3.8"
libipld = "0.16.0"
libp2p = "0.54.1"
rust-ipfs = "0.11.21"
rustyline-async = "0.4.3"
ouroboros = "0.18.4"
memx = "0.1.32"
fmmap = {version = "0.3.3", features = ["sync", "tokio-async"]}
minicbor = {version = "0.24.2", features = ["alloc", "derive", "half"]}
brotli = "6.0.0"
c509-certificate = { git = "https://github.com/input-output-hk/catalyst-libs.git", package = "c509-certificate", branch = "main"}
num-traits = "0.2.19"
logcall = "0.1.9"
ureq = {version = "2.10.1", features=["native-certs"]}
http = "1.1.0"
hickory-resolver = { version = "0.24.1", features = ["dns-over-rustls"] }
moka = { version = "0.12.8", features = ["sync"]}
der = "0.7.9"
der-parser = "9.0.0"
utf8-decode = "1.0.1"
bech32 = "0.11.0"
