[workspace]
resolver = "2"
members = [
    "bin",
    "bin/tests/integration/components/http_request_rte_01",
    "bin/tests/integration/components/failed_init",
    "bin/tests/integration/components/sleep_component",
    "bin/tests/integration/components/cron_callback",
    "bin/tests/integration/components/staked_ada_indexer_mock",
    "bin/tests/integration/components/doc_sync_subscribe",
]
default-members = [
    "bin",
]

[workspace.package]
edition = "2024"
version = "0.0.1"
authors = [
    "Steven Johnson <steven.johnson@iohk.io>"
]
homepage = "https://input-output-hk.github.io/hermes"
repository = "https://github.com/input-output-hk/hermes"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"
arithmetic_side_effects = "deny"

[patch."https://github.com/input-output-hk/catalyst-libs.git"]
hermes-ipfs = { path = "../../catalyst-libs/rust/hermes-ipfs" }
