#cspell: words Apisit Ritreungroj wasmparser wasi bindgen

[workspace]
resolver = "2"
members = [
    "crates/wasi-component-adapter",
    "crates/wasi-component-adapter/verify",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = [
    "Apisit Ritreungroj <apisit.ritreungroj@iohk.io>",
    "Steven Johnson <steven.johnson@iohk.io>"
]
rust-version = "1.73"
homepage = "https://input-output-hk.github.io/hermes"
repository = "https://github.com/input-output-hk/hermes"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

# for `wasi-preview1-component-adapter`
wit-bindgen = "0.16.0"
byte-array-literals = { path = "./crates/wasi-component-adapter/byte-array-literals", version = "0.0.1" }
wasm-encoder = "0.38.1"
object = "0.32.1"

# for `wasi-preview1-component-adapter/verify`
wasmparser = "0.118.1"
wat = "1.0.82"
anyhow = "1.0.76"

[workspace.lints]
