#cspell: words Apisit Ritreungroj wasi bindgen

[workspace]
resolver = "2"
members = [
    "crates/wasi-component-adapter",
    "crates/byte-array-literals"
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = [
    "Apisit Ritreungroj <apisit.ritreungroj@iohk.io>",
    "Steven Johnson <steven.johnson@iohk.io>"
]
rust-version = "1.73"
homepage = "https://input-output-hk.github.io/hermes"
repository = "https://github.com/input-output-hk/hermes"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

# for `wasi-preview1-component-adapter`
wit-bindgen = { version = "0.16.0", default-features = false }
wasi = { version = "0.11.0", default-features = false }
byte-array-literals = { path = "./crates/byte-array-literals", version = "0.0.1" }
wasm-encoder = "0.38.1"
object = { version = "0.32.1", default-features = false }

[workspace.lints]
