#cspell: words Apisit Ritreungroj wasi bindgen cdylib

[workspace]
resolver = "2"
members = [
    "./byte-array-literals"
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = [
    "Apisit Ritreungroj <apisit.ritreungroj@iohk.io>",
    "Steven Johnson <steven.johnson@iohk.io>"
]
homepage = "https://input-output-hk.github.io/hermes"
repository = "https://github.com/input-output-hk/hermes"
# inherited license from https://github.com/bytecodealliance/wasmtime
license = "Apache-2.0 WITH LLVM-exception"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"

[workspace.dependencies]
wit-bindgen = { version = "0.16.0", default-features = false }
wasi = { version = "0.11.0", default-features = false }
byte-array-literals = { path = "./byte-array-literals", version = "0.0.1" }
wasm-encoder = "0.38.1"
object = { version = "0.32.1", default-features = false }

[package]
name = "wasi-hermes-component-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "wasi_snapshot_hermes"

[lints]
workspace = true

[dependencies]
wasi = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"] }
byte-array-literals = { workspace = true }

[build-dependencies]
wasm-encoder = { workspace = true }
object = { workspace = true, features = ["archive"] }

[features]
default = ["reactor"]
reactor = []
proxy = []

