[package]
name = "cardano-chain-follower"
edition.workspace = true
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mithril-client.workspace = true

#turbo-downloader.workspace = true
pallas.workspace = true
pallas-hardano.workspace = true
pallas-crypto.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
dashmap.workspace = true
once_cell.workspace = true
url.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait.workspace = true
dirs.workspace = true
regex.workspace = true
futures.workspace = true
bytesize.workspace = true
async-compression.workspace = true
tokio-tar.workspace = true
humantime.workspace = true
crossbeam-skiplist.workspace = true
strum.workspace = true
strum_macros.workspace = true
blake3.workspace = true
rayon.workspace = true
ignore.workspace = true
hex.workspace = true
ouroboros.workspace = true

[dev-dependencies]
hex.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
clap.workspace = true

# Note, these features are for support of features exposed by dependencies.
[features]
default = ["rustls-tls-native-roots"]

# These features are for support of dependent crates only.
# They do not change the operation of the main crate.
native-tls = [
    "reqwest/native-tls",
    "mithril-client/native-tls",
    #"turbo-downloader/native-tls",
]
native-tls-alpn = [
    "reqwest/native-tls-alpn",
    "mithril-client/native-tls-alpn",
    #"turbo-downloader/native-tls-alpn",
]
native-tls-vendored = [
    "reqwest/native-tls-vendored",
    "mithril-client/native-tls-vendored",
    #"turbo-downloader/native-tls-vendored",
]

rustls-tls = [
    "reqwest/rustls-tls",
    "mithril-client/rustls-tls",
    #"turbo-downloader/rustls-tls",
]
rustls-tls-manual-roots = [
    "reqwest/rustls-tls-manual-roots",
    "mithril-client/rustls-tls-manual-roots",
    #"turbo-downloader/rustls-tls-manual-roots",
]
rustls-tls-webpki-roots = [
    "reqwest/rustls-tls-webpki-roots",
    "mithril-client/rustls-tls-webpki-roots",
    #"turbo-downloader/rustls-tls-webpki-roots",
]
rustls-tls-native-roots = [
    "reqwest/rustls-tls-native-roots",
    "mithril-client/rustls-tls-native-roots",
    #"turbo-downloader/rustls-tls-native-roots",
]
