[package]
name = "hermes-ipfs"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
libipld.workspace = true
rust-ipfs.workspace = true

[dev-dependencies]
# Dependencies used by examples
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
tracing-subscriber.workspace = true
rustyline-async.workspace = true
