[package]
name = "hermes-ipfs"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
libipld.workspace = true
rust-ipfs.workspace = true
tokio.workspace = true

[dev-dependencies]
# Dependencies used by examples
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
tracing-subscriber.workspace = true
rustyline-async.workspace = true
lipsum = "0.9.1"
ratatui = "0.27.0"
rand = "0.8.5"
