[package]
name = "turbo-downloader"
description = "Turbo Downloader Library - Fast downloader + optional extractor library for compressed *.tar.* files."
authors = [
    "Sieciech Czajka <sieciech.czajka@golem.network>",
    "Steven Johnson <steven.johnson@iohk.io>",
]
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "turbo_downloader"

[dependencies]
tokio = { workspace = true }

reqwest = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
humansize = { workspace = true }

tar = { workspace = true }

flate2 = { workspace = true }
bzip2 = { workspace = true }
lz4_flex = { workspace = true }
xz2 = { workspace = true }
zstd = { workspace = true }

serde = { workspace = true, features = ["derive"]}
chrono = { workspace = true, features = [
    "std",
    "serde",
] }
