[package]
name = "turbo-downloader"
description = "Turbo Downloader Library - Fast downloader + optional extractor library for compressed *.tar.* files."
authors = [
    "Sieciech Czajka <sieciech.czajka@golem.network>",
    "Steven Johnson <steven.johnson@iohk.io>",
]
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "turbo_downloader"

[dependencies]
tokio = { workspace = true }

#reqwest = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
    "blocking",
    "charset",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "hickory-dns",
    "macos-system-configuration",
] } 

anyhow = { workspace = true }
tracing = { workspace = true }
humansize = { workspace = true }

tar = { workspace = true }

flate2 = { workspace = true }
bzip2 = { workspace = true }
lz4_flex = { workspace = true }
xz2 = { workspace = true }
zstd = { workspace = true }

serde = { workspace = true, features = ["derive"]}
chrono = { workspace = true, features = [
    "std",
    "serde",
] }

[features]
default = [
    "rustls-tls-native-roots"
]

# These features are for support of dependent crates only.
# They do not change the operation of the main crate.
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
