cargo-features = ["per-package-target"]

[package]
name = "wasi-component-adapter"
forced-target = "wasm32-unknown-unknown"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
wasi = { version = "0.11.0", default-features = false }
wit-bindgen = { version = "0.16.0", default-features = false, features = ["macros"] }
byte-array-literals = { path = "./byte-array-literals" }

[build-dependencies]
wasm-encoder = { version = "0.38.1" }
object = { version = "0.32.1", default-features = false, features = ["archive"] }

[lib]
test = false
crate-type = ["cdylib"]
name = "wasi_snapshot_preview1"

[features]
default = ["reactor"]
reactor = []
command = []
proxy = []
