[package]
name = "http-test-component"
version = "0.1.0"
edition = "2024"

[lib]
# The name of the built .wasm file.
name = "http"
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46.0"

[profile.release]
# Significantly reduces WASM size.
lto = true
# Further reduces WASM size.
opt-level = "z"
