[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
cat-gateway-types = [
    "rbac-registration",
    "regex",
    "serde",
    "chrono",
    "hex",
    "ed25519-dalek",
    "num-bigint",
    "http",
    "utoipa",
    "uuid",
    "url",
    "base64",
    "bech32",
    "derive_more",
    "cardano-blockchain-types"
]

[dependencies]
wit-bindgen = "0.46.0"
anyhow = "1.0.100"
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
log = { version = "0.4.28", features = ["kv_serde"] }
cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6", optional = true }
catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }

rbac-registration = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.10", optional = true }
regex = { version = "1.12.2", optional = true }
serde = { version = "1.0.228", optional = true }
chrono = { version = "0.4.42", optional = true }
hex = { version = "0.4.3", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
num-bigint = { version = "0.4.6", optional = true }
http = { version = "1.3.1", optional = true }
utoipa = { version = "5.4.0", features = ["uuid", "url"], optional = true }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"], optional = true }
url = { version = "2.5.7", optional = true }
base64 = { version = "0.22.1", optional = true }
bech32 = { version = "0.11.0", optional = true }
derive_more = { version = "2.0.1", default-features = false, features = [
    "from",
    "into",
], optional = true }