[package]
edition = "2024"
name = "shared"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"
arithmetic_side_effects = "deny"

[features]
cardano-blockchain-types = [] # does nothing, deprecated. TODO(@no30bit): remove in dependencies.
cat-gateway-types = [
    "rbac-registration",
    "regex",
    "serde",
    "hex",
    "ed25519-dalek",
    "utoipa",
    "uuid",
    "url",
    "base64",
    "bech32",
]

[dependencies]
wit-bindgen = "0.46.0"
anyhow = "1.0.100"
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "into", "deref", "deref_mut"] }
log = { version = "0.4.28", features = ["kv_serde"] }
num-bigint = "0.4.6"

regex = { version = "1.12.2", optional = true }
serde = { version = "1.0.228", optional = true }
chrono = { version = "0.4.42" }
hex = { version = "0.4.3", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
utoipa = { version = "5.4.0", features = ["uuid", "url"], optional = true }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"], optional = true }
url = { version = "2.5.7", optional = true }
base64 = { version = "0.22.1", optional = true }
bech32 = { version = "0.11.0", optional = true }

cardano-blockchain-types = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.9" }
rbac-registration = { version = "0.0.15", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.15", optional = true }
catalyst-types = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.10" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
test-case = "3.3.1"