[package]
name = "cddl-linter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cddl-parser = { path = "../cddl-parser", version = "0.1.0" }
clap = { version = "4.5.3",  features = ["derive", "env"] }
anyhow = "1.0.71"
console = "0.15.8"

