#cspell: words memchr

[package]
name = "cddl-parser"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
derive_more =  { workspace = true, features = ["display"] }
pest = { workspace = true, features = ["std", "pretty-print", "memchr", "const_prec_climber"] }
pest_derive = { workspace = true, features = ["grammar-extras"] }
