#cspell: words memchr

[package]
name = "cddl-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
derive_more =  "0.99.17"
pest = { version = "2.7.2", features = ["std", "pretty-print", "memchr", "const_prec_climber"] }
pest_derive = { version = "2.7.2", features = ["grammar-extras"] }
thiserror = "1.0.56"
