[package]
name = "wasi-preview1-component-adapter"
license = "Apache-2.0 WITH LLVM-exception"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
wasi = { version = "0.11.0", default-features = false }
wit-bindgen = { workspace = true, features = ["macros"] }
byte-array-literals = { workspace = true }

[build-dependencies]
wasm-encoder = { workspace = true }
object = { workspace = true, features = ["archive"] }

[lib]
test = false
crate-type = ["cdylib"]
name = "wasi_snapshot_preview1"

[features]
default = ["reactor"]
reactor = []
command = []
proxy = []
